# pdfllm

./: .gitignore  CLAUDE.md  README.md  monitor.py  pdf_tiler.py  pyproject.toml  requirements.txt  scaffold.py  server.py
assets/: dashboard.css  dashboard.html  dashboard.js
