[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfllm"
version = "0.1.0"
description = "FastMCP-based PDF tiling MCP server for LLM analysis"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24.0",
    "mcp>=1.0.0",
    "Pillow>=10.0.0",
    "pdfplumber>=0.11.0",
]

[project.scripts]
pdfllm = "server:main"

[tool.setuptools]
py-modules = ["server", "pdf_tiler", "scaffold", "monitor"]
